objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomPickList__c</fullName>
        <description>For test pick list retrieve only deploy</description>
        <label>CustomPickList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Right_1</fullName>
                </value>
                <value>
                    <fullName>Right_2</fullName>
                </value>
                <value>
                    <fullName>Right_3</fullName>
                </value>
                <value>
                    <fullName>Left_1</fullName>
                </value>
                <value>
                    <fullName>Left_2</fullName>
                </value>
                <value>
                    <fullName>Left_3</fullName>
                </value>
                <value>
                    <fullName>Left_4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMD_CustomField_1__c</fullName>
        <label>DMD_CustomField_1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_CustomField_20__c</fullName>
        <label>DMD_CustomField_20</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_CustomField_2__c</fullName>
        <label>DMD_CustomField_2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMD_PicklistRetrieveOnly_2__c</fullName>
        <label>DMD_PicklistRetrieveOnly_2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left_1</fullName>
                </value>
                <value>
                    <fullName>Left_2</fullName>
                </value>
                <value>
                    <fullName>Left_3</fullName>
                </value>
                <value>
                    <fullName>Left_4</fullName>
                </value>
                <value>
                    <fullName>Right_1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMD_PicklistRetrieveOnly__c</fullName>
        <label>DMD_PicklistRetrieveOnly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left_1</fullName>
                </value>
                <value>
                    <fullName>Left_2</fullName>
                </value>
                <value>
                    <fullName>Left_3</fullName>
                </value>
                <value>
                    <fullName>Left_4</fullName>
                </value>
                <value>
                    <fullName>Left_5</fullName>
                </value>
                <value>
                    <fullName>Left_6</fullName>
                </value>
                <value>
                    <fullName>Left_7</fullName>
                </value>
                <value>
                    <fullName>Left_8</fullName>
                </value>
                <value>
                    <fullName>Left_9</fullName>
                </value>
                <value>
                    <fullName>Left_10</fullName>
                </value>
                <value>
                    <fullName>Left_11</fullName>
                </value>
                <value>
                    <fullName>Left_12</fullName>
                </value>
                <value>
                    <fullName>Left_13</fullName>
                </value>
                <value>
                    <fullName>Right_1</fullName>
                </value>
                <value>
                    <fullName>Right_2</fullName>
                </value>
                <value>
                    <fullName>Right_3</fullName>
                </value>
                <value>
                    <fullName>Left_14</fullName>
                </value>
                <value>
                    <fullName>Left_15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>CustomRecordType</fullName>
        <active>true</active>
        <description>CustomRecordType for test retrieve only pick list</description>
        <label>CustomRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMD_RecordType</fullName>
        <active>true</active>
        <label>DMD_RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>DMD_RecordType_2</fullName>
        <active>true</active>
        <label>DMD_RecordType_2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>